--- a/ACL4SSR_Online_Full.ini
+++ b/ACL4SSR_Online_Full.ini
@@ -29,7 +29,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 ;设置分组标志位
 custom_proxy_group=🚀 手动选择`select`.*
-custom_proxy_group=🚀 节点选择`select`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]🚀 手动选择`[]DIRECT
 custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🇭🇰 香港节点
 custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🚀 手动选择`[]🚀 节点选择
 custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🚀 手动选择`[]🚀 节点选择
