--- a/ACL4SSR_Online_Full.ini
+++ b/ACL4SSR_Online_Full.ini
@@ -31,9 +31,9 @@ ruleset=🐟 漏网之鱼,[]FINAL
 custom_proxy_group=🚀 手动选择`select`.*
 custom_proxy_group=🚀 节点选择`select`[]🚀 手动选择`[]DIRECT
 custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🇭🇰 香港节点
-custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🚀 手动选择`[]🚀 节点选择
-custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🚀 手动选择`[]🚀 节点选择
-custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🚀 手动选择`[]🚀 节点选择
+custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🚀 手动选择`[]🚀 节点选择
+custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🚀 手动选择`[]🚀 节点选择
+custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🚀 手动选择`[]🚀 节点选择
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]REJECT`[]DIRECT`[]🚀 手动选择`[]🚀 节点选择
