--- a/ACL4SSR_Online_Full.ini
+++ b/ACL4SSR_Online_Full.ini
@@ -10,7 +10,8 @@
 
 ;设置规则标志位
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/UnjlAms/ClashPersonRule/main/person_direct.list
-ruleset=🚀 节点选择,https://raw.githubusercontent.com/UnjlAms/ClashPersonRule/main/person_proxy.list
+ruleset=🌎 全球代理,https://raw.githubusercontent.com/UnjlAms/ClashPersonRule/main/person_proxy.list
+ruleset=🏴 美国专用,https://raw.githubusercontent.com/UnjlAms/ClashPersonRule/main/person_usa_proxy.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🛑 广告拦截,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising.list
@@ -19,7 +20,7 @@ ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/blackmatrix7/ios_r
 ruleset=🍎 苹果服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Game/Game.list
 ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
-ruleset=🚀 节点选择,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Global/Global.list
+ruleset=🌎 全球代理,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Global/Global.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
@@ -29,16 +30,17 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 ;设置分组标志位
 custom_proxy_group=🚀 手动选择`select`.*
-custom_proxy_group=🚀 节点选择`select`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]香港节点
-custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]美国节点`[]香港节点`[]🚀 手动选择`[]🚀 节点选择
-custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]美国节点`[]香港节点`[]🚀 手动选择`[]🚀 节点选择
-custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]美国节点`[]香港节点`[]🚀 手动选择`[]🚀 节点选择
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择
-custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]REJECT`[]DIRECT`[]🚀 手动选择`[]🚀 节点选择
-custom_proxy_group=香港节点`url-test`(港|HK|Hong Kong|unjlams)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=🌎 全球代理`select`[]🚀 手动选择`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]REJECT`[]DIRECT
+custom_proxy_group=🏴 美国专用`select`[]🚀 手动选择`[]🇺🇸 美国节点
+custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🇭🇰 香港节点
+custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🚀 手动选择`[]🌎 全球代理
+custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🚀 手动选择`[]🌎 全球代理
+custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🚀 手动选择`[]🌎 全球代理
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🌎 全球代理
+custom_proxy_group=🛑 广告拦截`select`[]DIRECT`[]REJECT
+custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]REJECT`[]🚀 手动选择`[]🚀 全球代理
+custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|Hong Kong|unjlams)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇸 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
 ;设置分组标志位
 
 enable_rule_generator=true
