--- a/Clash_Person_Config.ini
+++ b/Clash_Person_Config.ini
@@ -10,6 +10,7 @@
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/UnjlAms/ClashPersonRule/main/person_direct.list
 ruleset=🌎 全球代理,https://raw.githubusercontent.com/UnjlAms/ClashPersonRule/main/person_proxy.list
 ruleset=🏴 美国专用,https://raw.githubusercontent.com/UnjlAms/ClashPersonRule/main/person_usa_proxy.list
+ruleset=🎞️ 拦截专用,https://raw.githubusercontent.com/UnjlAms/ClashPersonRule/main/remote_proxy.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🛑 广告拦截,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising.list
@@ -31,6 +32,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 custom_proxy_group=🚀 手动选择`select`.*
 custom_proxy_group=🌎 全球代理`select`[]🚀 手动选择`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]REJECT`[]DIRECT
 custom_proxy_group=🏴 美国专用`select`[]🚀 手动选择`[]🇺🇸 美国节点
+custom_proxy_group=🎞️ 拦截专用`select`[]🎯 全球直连`[]🇭🇰 香港节点
 custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🇭🇰 香港节点
 custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🚀 手动选择`[]🌎 全球代理
 custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🚀 手动选择`[]🌎 全球代理
