--- a/Clash_Person_Config.ini
+++ b/Clash_Person_Config.ini
@@ -31,7 +31,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置分组标志位
 custom_proxy_group=🚀 手动选择`select`.*
 custom_proxy_group=🌎 全球代理`select`[]🚀 手动选择`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]REJECT`[]DIRECT
-custom_proxy_group=🏴 美国专用`select`[]🚀 手动选择`[]🇺🇸 美国节点
+custom_proxy_group=🏴 美国专用`select`[]🚀 手动选择`[]🇺🇸 美国节点`[]🏁 GPT
 custom_proxy_group=🎞️ 拦截专用`select`[]🎯 全球直连`[]🇭🇰 香港节点
 custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🇭🇰 香港节点
 custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🚀 手动选择`[]🌎 全球代理
@@ -42,6 +42,7 @@ custom_proxy_group=🛑 广告拦截`select`[]DIRECT`[]REJECT
 custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]REJECT`[]🚀 手动选择`[]🌎 全球代理
 custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|Hong Kong|unjlams)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇸 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=🏁 GPT`url-test`(GPT|gpt|)`http://www.gstatic.com/generate_204`300,,150
 ;设置分组标志位
 
 enable_rule_generator=true
