--- a/Clash_Person_Config.ini
+++ b/Clash_Person_Config.ini
@@ -42,7 +42,7 @@ custom_proxy_group=🛑 广告拦截`select`[]DIRECT`[]REJECT
 custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]REJECT`[]🚀 手动选择`[]🌎 全球代理
 custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|Hong Kong|unjlams)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇸 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=🏁 GPT`url-test`(GPT|gpt|)`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=🏁 GPT`url-test`(GPT|gpt)`http://www.gstatic.com/generate_204`300,,150
 ;设置分组标志位
 
 enable_rule_generator=true
